--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>How To Use Git</title>
+    <link rel="stylesheet" href="styless.css">
 </head>
 <body>
     <h1>Hello World!</h1>
